Contollers manager implemented